Fixed issues:     - ScrollTo animation when the user clicks on a navigation link did not respond on Mozilla Firefox.     - The "View Project" button on bigger screens and when a project was displayed on full screen, did not have an "overflow" setting and a scrollbar was displayed on Mozilla Firefox.

--- a/sass/content/_projects.scss
+++ b/sass/content/_projects.scss
@@ -477,6 +477,7 @@
 							    bottom: 0;
 							    padding: 28px 0;
 							    background: #fff;
+							    overflow: hidden;
 							    a {
 									position: relative;
 									background: darken( $color__text-color_bright, 20% );
